[gd_scene load_steps=8 format=3 uid="uid://ff082s2cpd0g"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_56v20"]
[ext_resource type="Texture2D" uid="uid://cswu8tolryu6h" path="res://scenes/game_object/player/player.png" id="1_xn5b6"]
[ext_resource type="PackedScene" uid="uid://6a38sh7pfjp3" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_14gh0"]
[ext_resource type="PackedScene" uid="uid://cyynh8uv4u4wp" path="res://scenes/component/health_component.tscn" id="2_xotrb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0a14d"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3cc0k"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_2muc3"]
radius = 52.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_56v20")

[node name="HealthComponent" parent="." instance=ExtResource("2_xotrb")]

[node name="AbilityManager" type="Node" parent="."]

[node name="SwordAbilityController" parent="AbilityManager" instance=ExtResource("2_14gh0")]

[node name="PlayerShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_0a14d")

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionAreaShape" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_3cc0k")

[node name="PlayerPickupArea" type="Area2D" parent="."]
position = Vector2(-1, 0)
collision_layer = 16
collision_mask = 0

[node name="PlayerPickupShape" type="CollisionShape2D" parent="PlayerPickupArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_2muc3")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_xn5b6")

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
